--- a/second.html
+++ b/second.html
@@ -45,16 +45,9 @@
         </section>
         <section class="section">
             <div class="container">
-                <p class="jmb2">
+                <h1 class="maintext">
                     Brief Bio
-                </p>
-                <p class="jmb2btn">
-                    Scroll down to show more
-                </p>
-            </div>
-        </section>
-        <section class="section">
-            <div class="container">
+                </h1>
                 <p lang="en">
                     Hi, I'm Shinnosuke Satoh. Call me Shin!</p>
                 <p lang="en">
@@ -77,10 +70,38 @@
                 </p>
                 <p lang="en">
                     I was awarded in a national English composition contest for high school student in
-                    Japan
-                    for
-                    three years in a row.
+                    Japan for three years in a row.
                 </p>
+            </div>
+        </section>
+        <section class="section">
+            <div class="container">
+                <h1 class="maintext">
+                    Research Interests
+                </h1>
+                <p lang="en">
+                    Geophysics, and planetary physics.
+                    <br>
+                    Icy planets and moons.
+                    <br>
+                    Moon-plasma interaction.
+                    <br>
+                    Planetary magnetic fields, planetary magnetospheres.
+                </p>
+                <h1 class="maintext">
+                    Research Interests
+                </h1>
+                <p lang="en">
+                    Geophysics, and planetary physics.
+                </p>
+                <p lang="en">
+                    Icy planets and moons.
+                </p>
+                <p lang="en">
+                    Moon-plasma interaction.
+                </p>
+                <p lang="en">
+                    Planetary magnetic fields, planetary magnetospheres.
             </div>
         </section>
         <section class="section">
