--- a/second.html
+++ b/second.html
@@ -89,19 +89,17 @@
                     Planetary magnetic fields, planetary magnetospheres.
                 </p>
                 <h1 class="maintext">
-                    Research Interests
+                    Societies
                 </h1>
                 <p lang="en">
-                    Geophysics, and planetary physics.
+                    Japan Geoscience Union, 2022 - present
+                    <br>
+                    Society of Geomagnetism and Earth, Planetary and Space Sciences, 2022 - present
                 </p>
-                <p lang="en">
-                    Icy planets and moons.
-                </p>
-                <p lang="en">
-                    Moon-plasma interaction.
-                </p>
-                <p lang="en">
-                    Planetary magnetic fields, planetary magnetospheres.
+            </div>
+        </section>
+        <section class="section">
+            <div class="container">
             </div>
         </section>
         <section class="section">
