--- a/second.html
+++ b/second.html
@@ -100,10 +100,49 @@
         </section>
         <section class="section">
             <div class="container">
+                <h1 class="maintext">
+                    Education
+                </h1>
+                <p lang="en">
+                    2018 - Atsugi High School, Kanagawa, Japan
+                    <br>
+                    2022 - B.S., Geophysics, Tohoku University, Miyagi, Japan
+                </p>
+                <h1 class="maintext">
+                    Awards
+                </h1>
+                <p lang="en">
+                    2015 - 全英連 第54回全国高等学校生徒英作文コンテスト 優良賞
+                    <br>
+                    2016 - 全英連 第55回全国高等学校生徒英作文コンテスト 入選
+                    <br>
+                    2017 - 全英連 第56回全国高等学校生徒英作文コンテスト 入選
+                    <br>
+                    2021 - 東北大学 青葉理学振興会 令和2年度 青葉理学振興会奨励賞 (Aoba Society for the Promotion of Science Award)
+                    <br>
+                    2022 - 東北大学 総長賞 (Tohoku University President Award)
+                </p>
             </div>
         </section>
         <section class="section">
-            <p>Section 04</p>
+            <div class="container">
+                <h1 class="maintext">
+                    Special Experiences
+                </h1>
+                <p lang="en">
+                    2021 - 学都「仙台・宮城」サイエンス・デイ2021 に東北大学大学院理学研究科太陽惑星空間系領域として出展
+                    <br>
+                    2021 - サイエンス・デイ オブ ザ イヤー2021 文部科学大臣賞 を東北大学大学院理学研究科太陽惑星空間系領域として受賞
+                    <br>
+                    2022 - 令和4年3月東北大学 学士学位記授与式 卒業生副総代
+                    <br>
+                    2022 - 東北大学理学部案内2023に寄稿
+                    <br>
+                    2022 - 東北大学大学院理学研究科 地球物理学専攻 オープンキャンパス2022 研究室紹介動画に出演
+                    <br>
+                    2022 - 仙台市天文台×東北大学大学院理学研究科公開サイエンス講座 2022年度第1回「ワクワク惑星探査 ～行け行け僕らの火星ローバー！～」を運営 (report)
+                </p>
+            </div>
         </section>
         <section class="section">
             <div class="site-footer">
