--- a/second.html
+++ b/second.html
@@ -30,6 +30,14 @@
         <!--▲ロゴ中央寄せ-->
     </div>
 
+    <div class="site-footer">
+        <div class="container">
+            <!--▼ロゴ中央寄せ-->
+            <p>© 2022 Shinnosuke Satoh, Tohoku University, Japan</p>
+            <!--▲ロゴ中央寄せ-->
+        </div>
+    </div>
+
     <main class="wrap">
         <section class="section">
             <div class="container">
@@ -100,7 +108,7 @@
         </section>
         <section class="section">
             <div class="container">
-                <h1 class="maintext">
+                <h1 class="maintext" id="area-1">
                     Education
                 </h1>
                 <p lang="en">
@@ -145,10 +153,20 @@
             </div>
         </section>
         <section class="section">
-            <div class="site-footer">
-                <!--▼ロゴ中央寄せ-->
-                <p id="area-1">© 2022 Shinnosuke Satoh, Tohoku University, Japan</p>
-                <!--▲ロゴ中央寄せ-->
+            <div class="container">
+                <h1 class="maintext">
+                    Publications
+                </h1>
+                <p lang="en">
+                    Shinnosuke Satoh, Fuminori Tsuchiya, Shotaro Sakai, Rikuto Yasuda, Yasumasa, Kasaba, and Tomoki
+                    Kimura, A Test Particle Simulation of Jovian Magnetospheric Electrons Precipitating into Europa’s
+                    Oxygen Atmosphere, Magnetospheres of Outer Planets Meeting 2022, Liège, Belgium, July 2022 (poster)
+                </p>
+                <p lang="en">
+                    Shinnosuke Satoh, Fuminori Tsuchiya, Shotaro Sakai, Rikuto Yasuda, Yasumasa, Kasaba, A Test Particle
+                    Simulation of Jovian Magnetospheric Electrons Precipitating into Europa’s Oxygen Atmosphere, Japan
+                    Geoscience Union Meeting 2022, Chiba, Japan, May 2022 (oral)
+                </p>
             </div>
         </section>
     </main>
