--- a/second.html
+++ b/second.html
@@ -47,12 +47,25 @@
                 <p class="jmb1btn">
                     Planetary Plasma and Atmospheric Research Center,<br>Tohoku University
                 </p>
-
-                <p class="jmb1btn"><a href="#area-1" class="border_slide_btn0">Learn More</a></p>
+                <p class="jmb1btn">
+                    <a href="#bio" class="border_slide_btn0">Biography</a>
+                </p>
+                <p class="jmb1btn">
+                    <a href="#research" class="border_slide_btn0">Research</a>
+                </p>
+                <p class="jmb1btn">
+                    <a href="#edu" class="border_slide_btn0">Education & Awards</a>
+                </p>
+                <p class="jmb1btn">
+                    <a href="#experiences" class="border_slide_btn0">Experiences</a>
+                </p>
+                <p class="jmb1btn">
+                    <a href="#pub" class="border_slide_btn0">Publications</a>
+                </p>
             </div>
         </section>
         <section class="section">
-            <div class="container">
+            <div class="container" id="bio">
                 <h1 class="maintext">
                     Brief Bio
                 </h1>
@@ -83,7 +96,7 @@
             </div>
         </section>
         <section class="section">
-            <div class="container">
+            <div class="container" id="research">
                 <h1 class="maintext">
                     Research Interests
                 </h1>
@@ -107,8 +120,8 @@
             </div>
         </section>
         <section class="section">
-            <div class="container">
-                <h1 class="maintext" id="area-1">
+            <div class="container" id="edu">
+                <h1 class="maintext">
                     Education
                 </h1>
                 <p lang="en">
@@ -133,7 +146,7 @@
             </div>
         </section>
         <section class="section">
-            <div class="container">
+            <div class="container" id="experiences">
                 <h1 class="maintext">
                     Special Experiences
                 </h1>
@@ -153,7 +166,7 @@
             </div>
         </section>
         <section class="section">
-            <div class="container">
+            <div class="container" id="pub">
                 <h1 class="maintext">
                     Publications
                 </h1>
