--- a/second.html
+++ b/second.html
@@ -145,8 +145,8 @@
                 </p>
             </div>
         </section>
-        <section class="section">
-            <div class="container" id="experiences">
+        <section class="section" id="experiences">
+            <div class="container">
                 <h1 class="maintext">
                     Special Experiences
                 </h1>
@@ -165,8 +165,8 @@
                 </p>
             </div>
         </section>
-        <section class="section">
-            <div class="container" id="pub">
+        <section class="section" id="pub">
+            <div class="container">
                 <h1 class="maintext">
                     Publications
                 </h1>
