--- a/second.html
+++ b/second.html
@@ -25,7 +25,7 @@
     <div class="site-header">
         <!--▼ロゴ中央寄せ-->
         <div class="container">
-            <p>Shinnosuke Satoh</p>
+            <p><a href="#top" class="border_slide_btn1">Shinnosuke Satoh</a></p>
         </div>
         <!--▲ロゴ中央寄せ-->
     </div>
@@ -39,7 +39,7 @@
     </div>
 
     <main class="wrap">
-        <section class="section">
+        <section class="section" id="top">
             <div class="container">
                 <p class="jmb1">
                     Hello, I'm Shin.<br>Welcome to my page!
