--- a/second.html
+++ b/second.html
@@ -64,8 +64,8 @@
                 </p>
             </div>
         </section>
-        <section class="section">
-            <div class="container" id="bio">
+        <section class="section" id="bio">
+            <div class="container">
                 <h1 class="maintext">
                     Brief Bio
                 </h1>
@@ -95,8 +95,8 @@
                 </p>
             </div>
         </section>
-        <section class="section">
-            <div class="container" id="research">
+        <section class="section" id="research">
+            <div class="container">
                 <h1 class="maintext">
                     Research Interests
                 </h1>
@@ -119,8 +119,8 @@
                 </p>
             </div>
         </section>
-        <section class="section">
-            <div class="container" id="edu">
+        <section class="section" id="edu">
+            <div class="container">
                 <h1 class="maintext">
                     Education
                 </h1>
