--- a/second.html
+++ b/second.html
@@ -45,9 +45,6 @@
                     Hello, I'm Shin.<br>Welcome to my page!
                 </p>
                 <p class="jmb1btn">
-                    Planetary Plasma and Atmospheric Research Center,<br>Tohoku University
-                </p>
-                <p class="jmb1btn">
                     <a href="#bio" class="border_slide_btn0">Biography</a>
                 </p>
                 <p class="jmb1btn">
@@ -179,6 +176,26 @@
                     Shinnosuke Satoh, Fuminori Tsuchiya, Shotaro Sakai, Rikuto Yasuda, Yasumasa, Kasaba, A Test Particle
                     Simulation of Jovian Magnetospheric Electrons Precipitating into Europa’s Oxygen Atmosphere, Japan
                     Geoscience Union Meeting 2022, Chiba, Japan, May 2022 (oral)
+                </p>
+            </div>
+        </section>
+        <section class="section" id="last">
+            <div class="container">
+                <h1 class="maintext">
+                    Shinnosuke Satoh
+                </h1>
+                <p lang="en">
+                    Planetary Plasma and Atmospheric Research Center, Graduate School of Science, Tohoku University
+                    <br>
+                    Department of Geophysics, Graduate School of Science, Tohoku University
+                </p>
+                <p lang="jp">
+                    佐藤晋之祐　さとうしんのすけ
+                </p>
+                <p lang="jp">
+                    東北大学大学院 理学研究科 惑星プラズマ・大気研究センター
+                    <br>
+                    東北大学大学院 理学研究科 地球物理学専攻
                 </p>
             </div>
         </section>
