--- a/second.html
+++ b/second.html
@@ -197,6 +197,22 @@
                     <br>
                     東北大学大学院 理学研究科 地球物理学専攻
                 </p>
+                <p lang="en">
+                    Mail:<br>
+                    shinnosuke.satoh -at- pparc.gp.tohoku.ac.jp<br>
+                    (change -at- to @ symbol)
+                </p>
+            </div>
+        </section>
+        <section class="section" id="last">
+            <div class="container">
+                <h1 class="maintext">
+                    Woohoo!
+                </h1>
+                <p lang="en">
+                    You've reached the end of my page.<br>
+                    Thank you for getting know me!
+                </p>
             </div>
         </section>
     </main>
