--- a/second.html
+++ b/second.html
@@ -182,8 +182,11 @@
         <section class="section" id="last">
             <div class="container">
                 <h1 class="maintext">
-                    Shinnosuke Satoh
+                    Contact
                 </h1>
+                <p lang="en">
+                    Shinnosuke Satoh
+                </p>
                 <p lang="en">
                     Planetary Plasma and Atmospheric Research Center, Graduate School of Science, Tohoku University
                     <br>
@@ -212,6 +215,9 @@
                 <p lang="en">
                     You've reached the end of my page.<br>
                     Thank you for getting know me!
+                </p>
+                <p class="jmb1btn">
+                    <a href="#top" class="border_slide_btn0">Back to Top</a>
                 </p>
             </div>
         </section>
