--- a/second.html
+++ b/second.html
@@ -59,6 +59,9 @@
                 <p class="jmb1btn">
                     <a href="#pub" class="border_slide_btn0">Publications</a>
                 </p>
+                <p class="jmb1btn">
+                    <a href="#contact" class="border_slide_btn0">Contact</a>
+                </p>
             </div>
         </section>
         <section class="section" id="bio">
@@ -179,7 +182,7 @@
                 </p>
             </div>
         </section>
-        <section class="section" id="last">
+        <section class="section" id="contact">
             <div class="container">
                 <h1 class="maintext">
                     Contact
