--- a/second.html
+++ b/second.html
@@ -139,9 +139,9 @@
                     <br>
                     2017 - 全英連 第56回全国高等学校生徒英作文コンテスト 入選
                     <br>
-                    2021 - 東北大学 青葉理学振興会 令和2年度 青葉理学振興会奨励賞 (Aoba Society for the Promotion of Science Award)
+                    2021 - Tohoku University Aoba Society for the Promotion of Science Award
                     <br>
-                    2022 - 東北大学 総長賞 (Tohoku University President Award)
+                    2022 - Tohoku University President Award
                 </p>
             </div>
         </section>
@@ -150,7 +150,7 @@
                 <h1 class="maintext">
                     Special Experiences
                 </h1>
-                <p lang="en">
+                <p lang="jp">
                     2021 - 学都「仙台・宮城」サイエンス・デイ2021 に東北大学大学院理学研究科太陽惑星空間系領域として出展
                     <br>
                     2021 - サイエンス・デイ オブ ザ イヤー2021 文部科学大臣賞 を東北大学大学院理学研究科太陽惑星空間系領域として受賞
