--- a/second.html
+++ b/second.html
@@ -224,6 +224,37 @@
                 </p>
             </div>
         </section>
+        <section class="section" id="personal">
+            <div class="container">
+                <h1 class="maintext">
+                    My Personal Stuff
+                </h1>
+                <p lang="en">
+                    This is a secret section only for you,<br>
+                    someone brave enough to reach here...
+                </p>
+                <p class="jmb1btn">
+                    Cameras
+                </p>
+                <p lang="en">
+                    I LOVE taking pictures with my camera. My buddies are Olympus Pen EES-2 and iPhone 12 Pro.
+                </p>
+                <p class="jmb1btn">
+                    Movies
+                </p>
+                <p lang="en">
+                    All time favorite: "You've Got Mail", "The Intern", "Star Wars" series, etc.<br>
+                    Recently I found "Nocturnal Animals" is a masterpiece!
+                </p>
+                <p class="jmb1btn">
+                    Travel
+                </p>
+                <p lang="en">
+                    Visited: <br>
+                    Wish to visit: Grand Canyon. Not the Moon or Mars. Sorry!
+                </p>
+            </div>
+        </section>
     </main>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
