--- a/second.html
+++ b/second.html
@@ -227,11 +227,10 @@
         <section class="section" id="personal">
             <div class="container">
                 <h1 class="maintext">
-                    My Personal Stuff
+                    My Personal Favorite
                 </h1>
                 <p lang="en">
-                    This is a secret section only for you,<br>
-                    someone brave enough to reach here...
+                    This is a secret section only for you, someone brave enough to reach here...
                 </p>
                 <p class="jmb1btn">
                     Cameras
@@ -243,14 +242,16 @@
                     Movies
                 </p>
                 <p lang="en">
-                    All time favorite: "You've Got Mail", "The Intern", "Star Wars" series, etc.<br>
-                    Recently I found "Nocturnal Animals" is a masterpiece!
+                    "You've Got Mail", "The Intern", "Star Wars" series, etc. Recently I found "Nocturnal Animals" is a
+                    masterpiece!
                 </p>
                 <p class="jmb1btn">
-                    Travel
+                    Travels
                 </p>
                 <p lang="en">
-                    Visited: <br>
+                    Air travel can be annoyingly exhausting, but visiting New York City was just amazing. What a
+                    beautiful
+                    city.<br>
                     Wish to visit: Grand Canyon. Not the Moon or Mars. Sorry!
                 </p>
             </div>
