--- a/second.html
+++ b/second.html
@@ -33,7 +33,7 @@
     <div class="site-footer">
         <div class="container">
             <!--▼ロゴ中央寄せ-->
-            <p>© 2022 Shinnosuke Satoh, Tohoku University, Japan</p>
+            <p>© 2022 Shinnosuke Satoh</p>
             <!--▲ロゴ中央寄せ-->
         </div>
     </div>
@@ -89,10 +89,6 @@
                     I'm now working towards master's degree at Graduate School of Science, Tohoku
                     University.
                 </p>
-                <p lang="en">
-                    I was awarded in a national English composition contest for high school student in
-                    Japan for three years in a row.
-                </p>
             </div>
         </section>
         <section class="section" id="research">
@@ -129,15 +125,22 @@
                     <br>
                     2022 - B.S., Geophysics, Tohoku University, Miyagi, Japan
                 </p>
+            </div>
+        </section>
+        <section class="section" id="edu">
+            <div class="container">
                 <h1 class="maintext">
                     Awards
                 </h1>
                 <p lang="en">
-                    2015 - 全英連 第54回全国高等学校生徒英作文コンテスト 優良賞
+                    2015 - An honorble mention in the 54th Nationwide English Language Composition Contest for Senior
+                    High School Students
                     <br>
-                    2016 - 全英連 第55回全国高等学校生徒英作文コンテスト 入選
+                    2016 - An honorble mention in the 55th Nationwide English Language Composition Contest for Senior
+                    High School Students
                     <br>
-                    2017 - 全英連 第56回全国高等学校生徒英作文コンテスト 入選
+                    2017 - An honorble mention in the 56th Nationwide English Language Composition Contest for Senior
+                    High School Students
                     <br>
                     2021 - Tohoku University Aoba Society for the Promotion of Science Award
                     <br>
@@ -192,16 +195,12 @@
                 </p>
                 <p lang="en">
                     Planetary Plasma and Atmospheric Research Center, Graduate School of Science, Tohoku University
-                    <br>
-                    Department of Geophysics, Graduate School of Science, Tohoku University
                 </p>
                 <p lang="jp">
                     佐藤晋之祐　さとうしんのすけ
                 </p>
                 <p lang="jp">
                     東北大学大学院 理学研究科 惑星プラズマ・大気研究センター
-                    <br>
-                    東北大学大学院 理学研究科 地球物理学専攻
                 </p>
                 <p lang="en">
                     Mail:<br>
