--- a/second.html
+++ b/second.html
@@ -42,7 +42,7 @@
         <section class="section" id="top">
             <div class="container">
                 <p class="jmb1">
-                    Hello, I'm Shin.<br>Welcome to my page!
+                    Welcome to my page!
                 </p>
                 <p class="jmb1btn">
                     <a href="#bio" class="border_slide_btn0">Biography</a>
@@ -51,7 +51,10 @@
                     <a href="#research" class="border_slide_btn0">Research</a>
                 </p>
                 <p class="jmb1btn">
-                    <a href="#edu" class="border_slide_btn0">Education & Awards</a>
+                    <a href="#edu" class="border_slide_btn0">Education</a>
+                </p>
+                <p class="jmb1btn">
+                    <a href="#awards" class="border_slide_btn0">Awards</a>
                 </p>
                 <p class="jmb1btn">
                     <a href="#experiences" class="border_slide_btn0">Experiences</a>
@@ -127,7 +130,7 @@
                 </p>
             </div>
         </section>
-        <section class="section" id="edu">
+        <section class="section" id="awards">
             <div class="container">
                 <h1 class="maintext">
                     Awards
