--- a/second.html
+++ b/second.html
@@ -4,6 +4,8 @@
 <head>
     <base target="_top">
     <meta charset="utf-8">
+    <meta name="description"
+        content="Since joining Planetary Plasma and Atmospheric Research Center (PPARC) at Tohoku University in 2021, Shinnosuke Satoh has been working on studies about one of the jovian icy moons, Europa." />
     <meta http-equiv="X-UA-Compatible" cpntent="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700;900&display=swap" rel="stylesheet">
@@ -44,6 +46,8 @@
                 <p class="jmb1">
                     Welcome to my page!
                 </p>
+                <img src="https://user-images.githubusercontent.com/96368274/189119134-80971801-2a8a-4496-b27d-de8d71b7f956.jpg"
+                    alt="サンプル" title="タイトル" width="4" style="opacity: 0.0;">
                 <p class="jmb1btn">
                     <a href="#bio" class="border_slide_btn0">Biography</a>
                 </p>
