--- a/second.html
+++ b/second.html
@@ -46,8 +46,7 @@
                 <p class="jmb1">
                     Welcome to my page!
                 </p>
-                <img src="https://user-images.githubusercontent.com/96368274/189119134-80971801-2a8a-4496-b27d-de8d71b7f956.jpg"
-                    alt="サンプル" title="タイトル" width="4" style="opacity: 0.0;">
+                <img src="src/img/shinnosuke_satoh.jpg" alt="サンプル" title="タイトル" width="100" style="opacity: 1.0;">
                 <p class="jmb1btn">
                     <a href="#bio" class="border_slide_btn0">Biography</a>
                 </p>
