--- a/second.html
+++ b/second.html
@@ -46,7 +46,8 @@
                 <p class="jmb1">
                     Welcome to my page!
                 </p>
-                <img src="src/img/shinnosuke_satoh.jpg" alt="サンプル" title="タイトル" width="100" style="opacity: 1.0;">
+                <img src="img/shinnosuke_satoh.jpg" alt="shinnosuke_satoh" title="Shinnosuke Satoh" width="100"
+                    style="opacity: 1.0;">
                 <p class="jmb1btn">
                     <a href="#bio" class="border_slide_btn0">Biography</a>
                 </p>
