--- a/second.html
+++ b/second.html
@@ -149,9 +149,13 @@
                     2017 - An honorble mention in the 56th Nationwide English Language Composition Contest for Senior
                     High School Students
                     <br>
-                    2021 - Tohoku University Aoba Society for the Promotion of Science Award
+                    2021 - Tohoku University Aoba Society for the Promotion of Science Award (<a
+                        href="https://www.sci.tohoku.ac.jp/aoba-society/20210326-11460.html"
+                        class="border_slide_btn2">article</a>)
                     <br>
-                    2022 - Tohoku University President Award
+                    2022 - Tohoku University President Award (<a
+                        href="https://pparc.gp.tohoku.ac.jp/20220325_presidents_award/"
+                        class="border_slide_btn2">article</a>)
                 </p>
             </div>
         </section>
@@ -161,17 +165,23 @@
                     Special Experiences
                 </h1>
                 <p lang="jp">
-                    2021 - 学都「仙台・宮城」サイエンス・デイ2021 に東北大学大学院理学研究科太陽惑星空間系領域として出展
+                    2021 - 学都「仙台・宮城」サイエンス・デイ2021 に東北大学大学院理学研究科太陽惑星空間系領域として出展 (<a
+                        href="http://www.science-day.com/program/?ID=e2021-785" class="border_slide_btn2">article</a>)
                     <br>
-                    2021 - サイエンス・デイ オブ ザ イヤー2021 文部科学大臣賞 を東北大学大学院理学研究科太陽惑星空間系領域として受賞
+                    2021 - サイエンス・デイ オブ ザ イヤー2021 文部科学大臣賞 を東北大学大学院理学研究科太陽惑星空間系領域として受賞 (<a
+                        href="https://science-community.jp/サイエンス・デイ-オブ-ザ-イヤー2021（第５回）の結/"
+                        class="border_slide_btn2">article</a>)
                     <br>
                     2022 - 令和4年3月東北大学 学士学位記授与式 卒業生副総代
                     <br>
-                    2022 - 東北大学理学部案内2023に寄稿
+                    2022 - 東北大学理学部案内2023に寄稿 (<a href="https://www.sci.tohoku.ac.jp/about/pdf/sci_annai2023.pdf"
+                        class="border_slide_btn2">PDF</a>)
                     <br>
                     2022 - 東北大学大学院理学研究科 地球物理学専攻 オープンキャンパス2022 研究室紹介動画に出演
                     <br>
-                    2022 - 仙台市天文台×東北大学大学院理学研究科公開サイエンス講座 2022年度第1回「ワクワク惑星探査 ～行け行け僕らの火星ローバー！～」を運営 (report)
+                    2022 - 仙台市天文台×東北大学大学院理学研究科公開サイエンス講座 2022年度第1回「ワクワク惑星探査 ～行け行け僕らの火星ローバー！～」を運営 (<a
+                        href="https://www.sci.tohoku.ac.jp/mediaoffice/20220806-12227.html"
+                        class="border_slide_btn2">article</a>)
                 </p>
             </div>
         </section>
@@ -182,12 +192,12 @@
                 </h1>
                 <p lang="en">
                     Shinnosuke Satoh, Fuminori Tsuchiya, Shotaro Sakai, Rikuto Yasuda, Yasumasa, Kasaba, and Tomoki
-                    Kimura, A Test Particle Simulation of Jovian Magnetospheric Electrons Precipitating into Europa’s
+                    Kimura, A Test Particle Simulation of Jovian Magnetospheric Electrons Precipitating into Europa's
                     Oxygen Atmosphere, Magnetospheres of Outer Planets Meeting 2022, Liège, Belgium, July 2022 (poster)
                 </p>
                 <p lang="en">
                     Shinnosuke Satoh, Fuminori Tsuchiya, Shotaro Sakai, Rikuto Yasuda, Yasumasa, Kasaba, A Test Particle
-                    Simulation of Jovian Magnetospheric Electrons Precipitating into Europa’s Oxygen Atmosphere, Japan
+                    Simulation of Jovian Magnetospheric Electrons Precipitating into Europa's Oxygen Atmosphere, Japan
                     Geoscience Union Meeting 2022, Chiba, Japan, May 2022 (oral)
                 </p>
             </div>
@@ -198,21 +208,20 @@
                     Contact
                 </h1>
                 <p lang="en">
-                    Shinnosuke Satoh
-                </p>
-                <p lang="en">
+                    Shinnosuke Satoh<br>
                     Planetary Plasma and Atmospheric Research Center, Graduate School of Science, Tohoku University
                 </p>
                 <p lang="jp">
-                    佐藤晋之祐　さとうしんのすけ
-                </p>
-                <p lang="jp">
+                    佐藤晋之祐　さとうしんのすけ<br>
                     東北大学大学院 理学研究科 惑星プラズマ・大気研究センター
                 </p>
                 <p lang="en">
                     Mail:<br>
                     shinnosuke.satoh -at- pparc.gp.tohoku.ac.jp<br>
                     (change -at- to @ symbol)
+                </p>
+                <p lang="en">
+                    Do visit the <a href="https://pparc.gp.tohoku.ac.jp" class="border_slide_btn2">PPARC Web</a>!
                 </p>
             </div>
         </section>
